--- a/Client/Client/Client.csproj
+++ b/Client/Client/Client.csproj
@@ -78,6 +78,9 @@
     <Compile Include="Packets.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RPSButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Statics.cs" />
     <Compile Include="TCP.cs" />
     <EmbeddedResource Include="FormCreate.resx">
@@ -117,7 +120,16 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icons8-close-120.png" />
+    <None Include="Resources\paper.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\rock.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\scissors.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\qmark.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
